# ComboConsistencyV3

./: README.md
Combo Consistency V3/: combo-consistency v3.txt
Combo Consistency V3/akatsuki-pp-rs-main/src/osu/: attributes.rs
Combo Consistency V3/akatsuki-pp-rs-main/src/osu/difficulty/: mod.rs  speed_precal.rs  tap_bpm.rs
Combo Consistency V3/akatsuki-pp-rs-main/src/osu/difficulty/skills/: aim.rs  aim_rx.rs  mod.rs
Combo Consistency V3/akatsuki-pp-rs-main/src/osu/performance/: mod.rs  relax_marathon.rs
Notes and Possible Changes/General PP/Aim/: changes.md
Notes and Possible Changes/General PP/Speed/: changes.md
Notes and Possible Changes/Relax PP /: changes.md
Original PP System/: original.txt
ccv3-pp/: CHANGELOG.md  CODEOWNERS  Cargo.toml
ccv3-pp/src/catch/difficulty/skills/: movement.rs
ccv3-pp/src/osu/: attributes.rs
ccv3-pp/src/osu/difficulty/: mod.rs
ccv3-pp/src/osu/difficulty/skills/: aim.rs  aim_rx.rs  mod.rs  speed.rs
ccv3-pp/src/osu/performance/: ap_miss.rs  auto_marathon.rs  mod.rs  relax_marathon.rs  rx_miss.rs  speed_rework.rs
ccv3-pp/src/taiko/performance/: mod.rs
